[gd_scene load_steps=2 format=3 uid="uid://bvqxm8y7n3yjh"]

[ext_resource type="Script" path="res://scripts/save_debug_panel.gd" id="1"]

[node name="SaveDebugPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "加载中..."
autowrap_mode = 3

[node name="TestButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "测试存档"

[node name="AITestButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "测试 AI"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "关闭"
